# Inferno

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Common/: Game.cpp
Inferno.Desktop/: CMakeLists.txt  GameWindow.cpp  PlatformGame.cpp
Inferno.Desktop.Tests/: CMakeLists.txt  DesktopTests.cpp  TestGame.cpp  TestGame.h  TestPlayer.cpp  TestPlayer.h  TestScene.cpp  TestScene.h  TestWall.cpp  TestWall.h
Inferno.Desktop.Tests/Content/: DejaVuSans.fnt
Inferno.Desktop/Graphics/: GraphicsDevice.cpp  PlatformRenderer.cpp  RenderTarget.cpp
cmake/: FindHarfbuzz.cmake
common/: MathHelper.cpp  Matrix.cpp  Point.cpp  Rectangle.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
common/Graphics/: Color.cpp  RenderItem.cpp  Renderer.cpp
include/: Game.h  GameWindow.h  Inferno.h  Instance.h  MathHelper.h  Matrix.h  PlatformGame.h  Point.h  Rectangle.h  Scene.h  Vector2.h  Vector3.h  Vector4.h
include/Content/: ContentLoader.h
include/Graphics/: Camera.h  Color.h  Font.h  Glyph.h  GraphicsDevice.h  PlatformRenderer.h  RenderItem.h  RenderTarget.h  Renderer.h  Shader.h  ShaderEnums.h  ShaderLanguage.h  ShaderType.h  Sprite.h  Texture2D.h
include/Inferno/: Circle.h  Game.h  GameWindow.h  Inferno.h  Instance.h  Line.h  MathHelper.h  Matrix.h  Point.h  Rectangle.h  Scene.h  Vector2.h  Vector3.h  Vector4.h
include/Inferno/Content/: ContentLoader.h
include/Inferno/Events/: Action.h  ActionArgs.h  EventHandler.h
include/Inferno/Graphics/: Camera.h  Color.h  Font.h  Glyph.h  GraphicsDevice.h  RenderTarget.h  Renderer.h  Shader.h  ShaderEnums.h  Sprite.h  Texture2D.h
include/Inferno/Input/: ButtonState.h  Key.h  Keyboard.h  KeyboardState.h  Mouse.h  MouseState.h
include/Inferno/Physics/: BaseCollider.h  CircleCollider.h  CollisionActionArgs.h  LineCollider.h  RectangleCollider.h  SpriteCollider.h
include/Inferno/UI/: Control.h  ControlContainer.h
include/Inferno/World/: Instance.h  UpdatableInstance.h
include/Input/: ButtonState.h  Key.h  Keyboard.h  KeyboardState.h  Mouse.h  MouseState.h
src/: Circle.cpp  Game.cpp  GameWindow.cpp  Instance.cpp  Line.cpp  MathHelper.cpp  Matrix.cpp  Point.cpp  Rectangle.cpp  Scene.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Content/: ContentLoader.cpp
src/Graphics/: Camera.cpp  Color.cpp  Font.cpp  GraphicsDevice.cpp  RenderItem.cpp  RenderTarget.cpp  Renderer.cpp  Shader.cpp  Sprite.cpp  Texture2D.cpp
src/Input/: Keyboard.cpp  KeyboardState.cpp  Mouse.cpp  MouseState.cpp
src/Physics/: BaseCollider.cpp  CircleCollider.cpp  LineCollider.cpp  RectangleCollider.cpp  SpriteCollider.cpp
src/UI/: Control.cpp  ControlContainer.cpp
src/World/: Instance.cpp  UpdatableInstance.cpp
